kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking_restaurant
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: booking_restaurant
  template:
    metadata:
      labels:
        app: booking_restaurant
    spec:
      containers:
        - name: booking_restaurant
          #IMPORTANT: provide your username here
          image: backend/booking_restaurant:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
