kube/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: booking_restaurant
spec:
  type: NodePort
  ports: 
  - name: http
    port: 9000
    targetPort: 8000
  selector:
    app: booking_restaurant
