kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking_restaurant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: booking_restaurant
           port:
             number: 8000
